# cppgoat

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cc
DAL/: CMakeLists.txt  dalfactory.cc  dalfactory.hpp
DAL/sqlite/: CMakeLists.txt  sqlitedal.cc  sqlitedal.hpp
content/: app.html  create.html  index.html  login.html
include/: user_dal.hpp
server/: CMakeLists.txt  server.cc  server.hpp
